--- a/labs/Openshift/DevopsManagement/Dockerfile
+++ b/labs/Openshift/DevopsManagement/Dockerfile
@@ -1,7 +1,8 @@
 ## Build stage
 FROM maven:latest AS builder
 COPY app/ /
-RUN cd CustomerOrderServicesProject && mvn clean package
+RUN cd CustomerOrderServicesProject 
+RUN mvn clean package
 
 ## Application image
 FROM openliberty/open-liberty:full-java8-openj9-ubi
